--- a/sobre.qmd
+++ b/sobre.qmd
@@ -13,5 +13,5 @@ Coordenado por docentes do Instituto de Estudos Costeiros (IECOS), o ClubeR visa
 
 Dúvidas, sugestões ou colaborações? Fale conosco:
 
-- 📧 evaldoms@ufpa.br
+- 📧 astuciasnor@gmail.com
 - 🌐 [GitHub](https://github.com/astuciasnor/cluber)
