--- a/index.qmd
+++ b/index.qmd
@@ -3,6 +3,8 @@ title: "Bem-vindo ao ClubeR"
 format: html
 ---
 
+![](logo-cluber.png){fig-align="left" width="183"}
+
 # 🎓 Clube do Código - UFPA/Bragança
 
 Este site é um espaço colaborativo criado para apoiar estudantes de graduação e pós-graduação interessados em programação aplicada à pesquisa científica, com foco em **R** e **Python**.
